--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,7 +20,7 @@
     <color name="not_color">#E30000</color>
     <color name="default_arrow_color">#CCCCCC</color>
 
-
+    <color name="ar_purple">#6C028C</color>
 
 
 
