--- a/app/src/main/res/layout/timetable_schedule_list_activity.xml
+++ b/app/src/main/res/layout/timetable_schedule_list_activity.xml
@@ -64,7 +64,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="  |  "
+            android:text="  ·  "
             android:textColor="@color/hint_text_normal"
             android:textSize="@dimen/main_text_size"
             android:textStyle="bold"
