--- a/app/src/main/res/layout/map_fragment_detail_activity.xml
+++ b/app/src/main/res/layout/map_fragment_detail_activity.xml
@@ -267,8 +267,7 @@
             app:layout_constraintRight_toRightOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <!--
+<!--
         <TextView
             android:id="@+id/map_frag_detail_nearPlaceText"
             android:layout_width="match_parent"
@@ -276,7 +275,7 @@
             android:gravity="center_vertical"
             android:paddingLeft="24dp"
             android:paddingTop="12dp"
-            android:text="근처 장소"
+            android:text="주변 장소"
             android:textColor="@color/main_color"
 
             android:textSize="@dimen/main_text_size"
@@ -295,7 +294,10 @@
             app:layout_constraintTop_toBottomOf="@id/map_frag_detail_nearPlaceText"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />-->
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:overScrollMode="never"/>-->
 
 
 
